[workspace]
members = [
    "injector",
    "encryption/encryption",
    "encryption/encryption-procmacro",
    "sdk/schema",
    "sdk",
    "memory/memory",
    "memory/memory_macros",
    "platform",
    "egui/egui-directx11",
    "egui/egui-win32",
    "moros",
]

[workspace.dependencies]
windows = "0.51.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
log = "0.4.20"

[profile.release]
debug = false
strip = true
panic = "abort"
