[package]
name = "moros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
encryption = { path = "../encryption/encryption" }
sdk = { path = "../sdk" }
cstruct = { path = "../cstruct" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
thiserror = "1.0.49"
lazy_static = "1.4.0"
dotenvy_macro = "0.15.7"
anyhow = "1.0.75"
chrono = "0.4.31"
imgui = "0.11.0"
retour = "0.3.1"
vulkano = "0.34.0"
ash = "0.37.3"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"
]
