[package]
name = "moros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
encryption = { path = "../encryption/encryption" }
sdk = { path = "../sdk" }
cstruct = { path = "../cstruct" }
egui-directx11 = { path = "../egui/egui-directx11" }
egui-win32 = { path="../egui/egui-win32" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
thiserror = "1.0.49"
lazy_static = "1.4.0"
dotenvy_macro = "0.15.7"
anyhow = "1.0.75"
chrono = "0.4.31"
retour = "0.3.1"
egui = "0.22.0"
parking_lot = "0.12.1"
regex = "1.10.2"
iced-x86 = "1.20.0"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_ProcessStatus"
]
