[package]
name = "encryption-procmacro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
litrs = "0.4.1"
proc-macro2 = "1.0.69"
quote = "1.0.33"
rand = "0.8.5"
syn = "2.0.38"
